# etl-postgres-to-turso

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-manager.sh  main.py  pyproject.toml  requirements.txt
Docker/application/dev/: docker-compose-dev.yaml
Docker/application/prod/: docker-compose-prod.yaml
config/: __init__.py  default.py  localdev.py  prod.py  testing.py
core/database_managers/: connection_managers.py
core/extract/: iam_gateway.py
core/helpers/: common_sql.py
core/load/: iam_gateway.py
core/models/: iam_gateway.py
core/rsa_encrypt_decrypt/: rsa_manager.py
tests/: __init__.py  test_common_sql.py  test_export_user.py  test_import_user.py  test_rsa_encrypt_decrypt.py
